<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#110080ff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/return_button"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/button_return_to_login_text"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgetpassword_title"
                android:layout_width="224dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_forgetpassword_text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip_forgetpassword_text1"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="#ffffffff"
            android:hint="@string/input_email_text"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="#ffffffff"
            android:hint="@string/input_passwordmodify_text"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="#ffffffff"
            android:hint="@string/input_passwordconfirm_text"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:background="#ffffffff"
            android:hint="@string/input_verification_text"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:visibility="invisible"></LinearLayout>

        <Button
            android:id="@+id/verification_button"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:text="@string/button_verification_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/forgetpassword_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/button_modifypasswordconfirm_text"
            android:textSize="14dp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip"
            android:textSize="14dp" />

        <MultiAutoCompleteTextView
            android:id="@+id/register_tip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tip_forgetpassword_text2"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>