<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#110080ff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/headImg_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="#ffffffff"
            android:hint="@string/input_username_text"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:background="#330080ff"
        android:orientation="vertical"
        android:visibility="invisible">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="#ffffffff"
            android:hint="@string/input_password_text"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#330080ff"
        android:orientation="vertical"
        android:visibility="invisible">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_login_text"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:gravity="bottom"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/forgetPassword_button"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/button_forgetpassword_text"
                android:textSize="12sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="204dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/register_button"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/button_register_text"
                android:textSize="12sp"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>