<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="111dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="102dp"
            android:layout_height="25dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:text="@string/todayfood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="96dp"
            android:layout_height="25dp"
            android:layout_marginEnd="52dp"
            android:layout_marginTop="32dp"
            android:text="@string/todayenergy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="108dp"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="44dp"
            android:text="TextView"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="79dp"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="68dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="46dp"
            android:layout_height="23dp"
            android:layout_marginEnd="8dp"
            android:text="@string/KCal"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"

            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="241dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="早餐要吃好"
                android:textSize="26sp" />

            <TextView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|right"
                android:text="TextView"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|left"
                android:text="@string/KCal"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <ListView
            android:id="@+id/food_lv"
            android:layout_width="match_parent"
            android:layout_height="438dp">
        </ListView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/btn_star"
            />
    </LinearLayout>

</LinearLayout>
